--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #111;
+  background-color: black;
 }
 
 
